--- a/docs/src/11_technical_risks.adoc
+++ b/docs/src/11_technical_risks.adoc
@@ -3,45 +3,45 @@ ifndef::imagesdir[:imagesdir: ../images]
 [[section-technical-risks]]
 == Risks and Technical Debts
 
-
 [role="arc42help"]
-****
+
 .Contents
-A list of identified technical risks or technical debts, ordered by priority
+A comprehensive list of identified technical risks and technical debts, prioritized based on their potential impact.
 
 .Motivation
-“Risk management is project management for grown-ups” (Tim Lister, Atlantic Systems Guild.) 
+“Risk management is project management for grown-ups” (Tim Lister, Atlantic Systems Guild.)
 
-This should be your motto for systematic detection and evaluation of risks and technical debts in the architecture, which will be needed by management stakeholders (e.g. project managers, product owners) as part of the overall risk analysis and measurement planning.
+This principle underlines the importance of proactively identifying and assessing risks and technical debts in the architecture. Understanding these factors enables project managers, product owners, and other stakeholders to make informed decisions, ensuring stability and scalability.
 
 .Form
-List of risks and/or technical debts, probably including suggested measures to minimize, mitigate or avoid risks or reduce technical debts.
-
+A structured list of risks and technical debts, accompanied by proposed mitigation strategies to minimize or prevent negative impacts.
 
 .Further Information
-
 See https://docs.arc42.org/section-11/[Risks and Technical Debt] in the arc42 documentation.
 
-****
-=== Risks 
-To assess the relevance level of the following risks, we will use number 1 to indicate low relevance, 2 for medium relevance, and 3 for high relevance.
+=== Risks
+To evaluate the significance of the identified risks, we use a scale from 1 to 3, where 1 denotes low relevance, 2 medium relevance, and 3 high relevance.
+
 [cols="1,1,3", options="header"]
 |===
-| Risk | Relevance |  Considerations
-| Limited knowledge of certain tools or languages | 2 | A solution could be to use the tools and languages that are most well-known to the team members. Also, each member should try to learn those aspects they know less about.
-| The team has not worked together before | 1 | A suggestion could be to mantain a good communication and inform about any aspect that could affect others.
-| Being a big group | 1 | Being  many members can difficult the communication. However, if the previous suggestions are followed there should not be any problem.
+| Risk | Relevance | Considerations
+| Limited expertise in specific tools or programming languages | 2 | The team may encounter difficulties due to varying levels of familiarity with required tools and languages. To address this, we will prioritize the use of well-known technologies within the team while encouraging knowledge-sharing and individual learning efforts.
+| Lack of prior collaboration within the team | 1 | Since the team has not worked together before, there is a risk of inefficiencies in coordination. Establishing clear communication channels and regularly updating each other on progress will mitigate this issue.
+| Large team size | 1 | A higher number of contributors can complicate communication and workflow synchronization. Implementing structured meetings and documentation processes should help maintain efficiency.
+| Potential delays in integrating external APIs | 2 | Depending on external data sources, such as Wikidata, might introduce latency or downtime risks. Developing fallback mechanisms and caching strategies can help mitigate disruptions.
 |===
 
-=== Technical debts 
+=== Technical Debts
 [cols="1,3", options="header"]
 |===
-| Technical Debt |  Considerations
-| Low-quality code | The use of new technologies and languages can lead to poorly written or poorly designed code. To address this issue, we will use pull requests to ensure that the code is reviewed by multiple team members.
-| Deployment issues | Having not worked with Docker and other deployment tools before may cause problems when deploying the application. For this reason, we are trying to put our best into learning these new technologies.
-| Dependency with Wikidata | It is a requirement so we need to depend on it. However, we have created a questions database so in case that Wikidata was not working, the application would continue to work for some time.
-| Filtering questions and answers | Given the structure of Wikidata there are sometimes where questions and answers do not have the proper label we are looking for. Although we have stablished filters and different strategies, sometimes it fails.
-| Changes in database model | Changing the model of a relational database makes it necessary to create a new database, losing all of the data we had before.
-| Game duplication code | Due to our little knowledge about JavaScript, we have not found a way of optimizing code from different game modes. It would be necessary to search for another way of doing it, as this is not maintenable.
-| Non-expiring session token | Once someone has logged in in the application, session token does not expire. That way session does not finish unless you explicitly log out.
+| Technical Debt | Considerations
+| Code maintainability and quality | Adopting new languages and frameworks can lead to inconsistencies in coding standards. To prevent this, we will enforce code reviews through pull requests, ensuring peer validation and adherence to best practices.
+| Deployment complexities | Since the team has limited experience with Docker and related deployment tools, deployment might pose challenges. To mitigate this, we will allocate time for learning and experimenting with deployment methodologies before the final implementation.
+| Dependency on Wikidata | As the system relies on Wikidata, any service downtime could disrupt functionality. To address this, we have implemented a local question database to provide temporary resilience.
+| Data integrity in database modifications | Structural changes in the relational database model require creating a new database, resulting in potential data loss. Establishing proper migration strategies and backup mechanisms will reduce this risk.
+| Filtering and validation of Wikidata responses | Inconsistencies in Wikidata labeling can lead to inaccurate or irrelevant questions and answers. We have implemented filtering mechanisms but recognize the need for further refinement to improve accuracy.
+| Code redundancy in game modes | Due to limited JavaScript experience, there is redundant code across different game modes, making maintenance difficult. Refactoring and modularizing common functionalities will enhance maintainability.
+| Session management | The current session implementation does not include expiration, which poses security risks. Implementing session expiration policies will improve security and user management.
 |===
+
+By systematically addressing these risks and technical debts, we aim to enhance project stability, maintainability, and long-term viability.
