docs: Documentar la estrategia de trabajo con git

--- a/docs/src/09_architecture_decisions.adoc
+++ b/docs/src/09_architecture_decisions.adoc
@@ -34,3 +34,5 @@ There you will find links and examples about ADR.
 
 ****
 include::ADR/01-fork-base-project.adoc[]
+
+include::ADR/02-git-workflow.adoc[]
