--- a/docs/src/08_concepts.adoc
+++ b/docs/src/08_concepts.adoc
@@ -7,41 +7,43 @@ ifndef::imagesdir[:imagesdir: ../images]
 ****
 .Content
 This section describes overall, principal regulations and solution ideas that are relevant in multiple parts (= cross-cutting) of your system.
-Such concepts are often related to multiple building blocks.
-They can include many different topics, such as
+Such concepts are often related to multiple building blocks and secures consistency and integrity.
 
-* models, especially domain models
-* architecture or design patterns
-* rules for using specific technology
-* principal, often technical decisions of an overarching (= cross-cutting) nature
-* implementation rules
+They can include many different topics, such as:
+
+- models, especially domain models, which are important for the deployment of the project.
+- architecture or design patterns.
+- rules for using specific technology, to find out what we have implemented and why.
+- principal, often technical decisions of an overarching (= cross-cutting) nature.
+- implementation rules.
 
 
 .Motivation
-Concepts form the basis for _conceptual integrity_ (consistency, homogeneity) of the architecture. 
+The most important concepts that our project will follow are the basis for _conceptual integrity_ (consistency, homogeneity) of the architecture. 
+
 Thus, they are an important contribution to achieve inner qualities of your system.
 
 Some of these concepts cannot be assigned to individual building blocks, e.g. security or safety. 
 
 
 .Form
-The form can be varied:
+The form can be varied in many different ways:
 
-* concept papers with any kind of structure
-* cross-cutting model excerpts or scenarios using notations of the architecture views
-* sample implementations, especially for technical concepts
-* reference to typical usage of standard frameworks (e.g. using Hibernate for object/relational mapping)
+* concept papers with any kind of structure.
+* cross-cutting model excepts or scenarios using notations of the architecture views.
+* sample implementations, especially for technical concepts.
+* reference to typical usage of standard frameworks (e.g. using Hibernate for object/relational mapping).
 
 .Structure
 A potential (but not mandatory) structure for this section could be:
 
-* Domain concepts
-* User Experience concepts (UX)
-* Safety and security concepts
-* Architecture and design patterns
-* "Under-the-hood"
-* development concepts
-* operational concepts
+* Domain Concepts.
+* User Experience Concepts (UX).
+* Safety and security Concepts.
+* Architecture and design patterns.
+* "Under-the-hood".
+* Development Concepts.
+* Operational Concepts.
 
 Note: it might be difficult to assign individual concepts to one specific topic
 on this list.
@@ -57,11 +59,11 @@ See https://docs.arc42.org/section-8/[Concepts] in the arc42 documentation.
 
 Some important concepts need to be taken into account so as to a better understanding of the application. These concepts have to do with the following categories.
 
-. Domain concepts
-. User Experience (UX)
-. Operation Concepts
-. Architecture and Design Patterns
-. Development Concepts
+. Domain concepts.
+. User Experience (UX).
+. Operation Concepts.
+. Architecture and Design Patterns.
+. Development Concepts.
 
 Next, each category will be detailed.
 
@@ -70,7 +72,7 @@ At the moment, the application follows this schema:
 
 image::08_domain_model_1.png["Current version of the domain model"]
 
-* **User**: it is the person that uses the application. There can be multiple Users at the same time using the app. 
+* **User**: it is the person that uses the application. Multiple user sessions are an option in this application. 
 * **Contest**: The contest is the part that the User can see. It contains everything the user can do, such as play games, be part of groups or look for rankings and statistics.
 * **Game**: The User can play different games, including _The Challenge_, _Wise Men Stack_ or even a multiplayer mode, which enables various Users to play together. Games consist of several questions to which users have to answer. Down below there is an schema that show the different game modes that are available.
 * **Question**: Each question has different answers but only one of them is correct. Answering correctly to the questions rewards users with _points_.
@@ -89,33 +91,36 @@ image::08_domain_model_2.png["Current version of the game modes"]
 
 
 === User Experience (UX)
-* https://arquisoft.github.io/wiq_es04a/#_technical_terms[**Frontend**]: the frontend of this application consists of a deployed web app which is deployed. The user can register or log in with accounts already created on an intuitive page. They can also play different game modes and to consult their historial record, statistics, and even some rankings.
-As it can be seen down below, the homepage is bright and appealing, which leads to a better user experience. Users can easily choose the game mode they prefer and play.
+- Easy registration: The user can register or log in with accounts already created on an intuitive page. 
+- Several modes: They can also play different game modes and to consult their historial record, statistics, and even some rankings.
+- https://arquisoft.github.io/wiq_es04a/#_technical_terms[**Frontend**]: the frontend of this application consists of a deployed web app which is deployed. 
+- https://arquisoft.github.io/wiq_es04a/#_technical_terms[**Internationalization**] The application is available in various languages, including English as the main language. This would provide a better user experience as users could better tailor the application to their personal preferences.
+- Better user experience: Users can easily choose the game mode they prefer and play.
 
 image::08_homepage.png["Current homepage window"]
 
-* https://arquisoft.github.io/wiq_es04a/#_technical_terms[**Internationalization**] The application is available in various languages, including English as the main language. This would provide a better user experience as users could better tailor the application to their personal preferences.
-
 === Operation Concepts
-* **Usability**: We tried for the application to be easy to use. For this reason, we had some people try our application. This way we can know its strengths and weaknesses and improve them. Usability affects User Experience as well, so it is an important aspect of the application. Up to this moment, usability testing has helped with the color palette chosen the application.
-
-We have also taken into account certain aspects that could difficult a person to use our application properly. For instance, we have stablished tics and crosses as well as colours to know if questions are correct or not. For this reason, a daltonic person would get to know if they got the answer correct or not easily.
+- Usability: We tried for the application to be easy to use. For this reason, we will try to spread this application to several types of persons, to complete and expand its strengths and weaknesses and improve them. 
+- Usability affects User Experience as well, so it is an important aspect of the application.
+- Tics and crosses as well as colours to know if questions are correct or not.
+- Adaptive application for color blind people, for knowing if they got the answer correct or not easily.
 
 
 === Security
-We have implemented some security in the application. We have blocked access to certain directions if you are not logged in. This way, we avoid external people to be able to access our application as it could lead to other security issues.
-We have also stablished that passwords need to follow a certain security level. They need to be at least 8 characters longs and they must contain upper and lower letters, numbers and special characters. Also, passwords are stored encrypted. In case that the batabase is stolen, data would still be secure. 
+* We have implemented some security in the application, which will be listed now. 
+- Some blocked sites if the user is not logged in an account: This way, we avoid external people to be able to access our application as it could lead to other security issues.
+- Passwords with a minimal security level: They need to be at least 8 characters longs and they must contain upper and lower letters, numbers and special characters. 
+- Encrypted passwords: In case that the batabase is stolen, data would still be secure. 
 
 === Architecture and Design Patterns
-* https://arquisoft.github.io/wiq_es04a/#_technical_terms[**Microservice**]: In this application there are some microservices such as the User Management, which involves signing up, logging in and everything related to the points and timing of the user. Microservices provide an easy way of creating a complex application composed by independent systems.
-Another important microservice is the questions generation system. It creates infinite questions related to varios topics. Thats to this, users can never get bored of the game, as questions do not repeat themselves.
-The webapp microservice includes everything related to the graphic interface. Users are able to communicate with the application thats to this service.
+- https://arquisoft.github.io/wiq_es04a/#_technical_terms[**Microservice**]: In this application there are some microservices such as the User Management, which involves signing up, logging in and everything related to the points and timing of the user. Microservices provide an easy way of creating a complex application composed by independent systems.
+- Questions generation system: It is a microservice that creates infinite questions related to several topics, with only one type of questions: related to images. In that type of question, an image will be given for the user to guess what it is, with only one correct answer and three distractors.
+- Graphic interface: Users are able to communicate with the application to this service.
 
 All of the architectural decisions that have taken place through the application creation are specified in the https://github.com/Arquisoft/wiq_es04a/wiki[repository Wiki section]
 
 === Development Concepts
-* **Testing**: Numerous use-cases are studied so as to provide a solid and easy-to-use application. There are unitary tests related to every functionality of the project, as well as e2e tests regarding the main game.
-
-* https://arquisoft.github.io/wiq_es04a/#_acronyms[**CI/CD**]: The application is in continuous integration and deployment. Team members commit frequently into the repository where the project is stored. This makes it easier when assembling project parts involving collaboration from different team members.
+- **Testing**: Includes unit tests for each functionality and end-to-end (e2e) tests for core gameplay features.
+- https://arquisoft.github.io/wiq_es04a/#_acronyms[**CI/CD**]: The application is in continuous integration and deployment. Team members commit frequently into the repository where the project is stored. This makes it easier when assembling project parts involving collaboration from different team members.
 
 image::08_mindmap_concepts.png["cross-cutting concepts"]
