--- a/docs/src/12_glossary.adoc
+++ b/docs/src/12_glossary.adoc
@@ -1,121 +1,103 @@
 ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-glossary]]
-== Glossary
+== Glosario
 
-In this section we will present, define and translate some concepts that we consider relevant to know when facing our application.
+En esta sección vamos a definir y traducir algunos conceptos que consideramos clave para entender nuestra aplicación.
 
-[role="arc42help"]
-****
-.Contents
-The most important domain and technical terms that your stakeholders use when discussing the system.
+=== ¿Por qué hacer un glosario?
+Cuando trabajamos en un equipo, es importante que todos hablemos el mismo "idioma" y no nos confundamos con términos técnicos o propios del dominio del proyecto. Este glosario nos ayuda a:
 
-You can also see the glossary as source for translations if you work in multi-language teams.
+* Asegurar que todos entiendan lo mismo cuando usamos ciertos términos.
+* Evitar confusiones por sinónimos o palabras que pueden significar varias cosas.
+* Tener referencias claras, especialmente si trabajamos con más de un idioma.
 
-.Motivation
-You should clearly define your terms, so that all stakeholders
+El formato es simple: una tabla con el término, su definición y, si aplica, su traducción al español.
 
-* have an identical understanding of these terms
-* do not use synonyms and homonyms
+Para más info, puedes echarle un vistazo a la documentación de arc42: https://docs.arc42.org/section-12/[Glosario].
 
-
-.Form
-
-A table with columns <Term> and <Definition>.
-
-Potentially more columns in case you need translations.
-
-
-.Further Information
-
-See https://docs.arc42.org/section-12/[Glossary] in the arc42 documentation.
-
-****
-
-=== Acronyms
+=== Acrónimos
 [cols="1,1,3",options="header"]
 |===
-|Acronym |Term |Definition
+|Acrónimo |Término |Definición
 
 |ADR
-|Arquitectural Design Record
-|Document that describes a choice the team makes about a significant aspect of the software architecture they're planning to build. Each ADR describes the architectural decision, its context, and its consequences, and its goal is to ensure that the proposed design meets functional, aesthetic, regulatory, and safety requirements before proceeding further with the project.
+|Architectural Design Record
+|Documento donde se registra una decisión importante sobre la arquitectura del software. Describe qué se decidió, el contexto de la decisión y sus consecuencias. Su objetivo es asegurarse de que el diseño cumple con requisitos funcionales, estéticos y de seguridad antes de avanzar con el desarrollo.
 
 |API
 |Application Programming Interface
-|Set of rules, protocols, and tools that allows different software applications to communicate and interact with each other. It defines the methods and data formats that developers can use to request and exchange information between different software components.
+|Conjunto de reglas y herramientas que permiten que diferentes aplicaciones se comuniquen entre sí. Define métodos y formatos de datos que los desarrolladores pueden usar para intercambiar información entre distintos sistemas.
 
 |CI/CD
 |Continuous Integration & Continuous Delivery
-|CI refers to the practice of automatically and frequently integrating code changes into a shared source code repository; CD is a 2 part process that refers to the integration, testing, and delivery of code changes. Continuous delivery stops short of automatic production deployment, while continuous deployment automatically releases the updates into the production environment.
+|Prácticas de desarrollo que automatizan la integración y entrega de código. CI se enfoca en integrar cambios de código frecuentemente, mientras que CD automatiza pruebas y despliegues. Continuous Delivery requiere una aprobación manual antes de pasar a producción, mientras que Continuous Deployment lo hace automáticamente.
 
-|WIQ
-|https://github.com/Arquisoft/wiq_es04a/discussions/19[Wikidata Infinite Quest]
-|Web application's name, where the users can register and login themselves to play different type of rounds.
+|WICHAT
+|https://github.com/Arquisoft/wichat_es01a/
+|Nombre de la aplicación web donde los usuarios pueden registrarse e iniciar sesión para jugar diferentes tipos de rondas.
 |===
 
-=== Domain Specific Terms
+=== Términos del dominio
 [cols="1,3,1",options="header"]
 |===
-|Term |Definition |ES Translation
+|Término |Definición |Traducción al español
 
-|Discovering cities
-|Test in which contestants receive clues about a specific city and must guess which city it is; this clues may include descriptions of geographical features, famous monuments, historical or cultural events, among other aspects related to the city in question.
+|Discovering Cities
+|Prueba donde los participantes reciben pistas sobre una ciudad y deben adivinar cuál es. Las pistas pueden incluir características geográficas, monumentos, eventos históricos o culturales.
 |Descubriendo ciudades
 
-|HappySw
-|Name of the fictitious company under which the members of the group will simulate that we have been hired to develop the application. 
+|ChattySw
+|Nombre ficticio de la empresa en la que simulamos haber sido contratados para desarrollar la aplicación.
 |_N/A_
 
 |Know & Win
-|Popular Spanish television program that combines quiz shows with educational entertainment aired daily on La 2 of Televisión Española. The show is known for its unique format, which includes a variety of challenges and tests where contestants demonstrate their knowledge in different areas such as history, geography, science, popular culture, literature, art, among other subjects. 
-|"Saber Y Ganar"
+|Programa de televisión español que mezcla concursos de preguntas con aprendizaje. Se emite en La 2 de Televisión Española y presenta desafíos de cultura general, historia, ciencia, arte, etc.
+|"Saber y Ganar"
 
 |Player
-|User who can register and then login into the app to play some of the different quizes explained around this explanation.
+|Usuario que se registra en la aplicación para jugar a los distintos quizzes disponibles.
 |Jugador
 
 |The Challenge
-|Test where contestants must face a series of questions or activities that test their knowledge and skills in a specific area, such as general culture, history, science, art, among other topics. This test may consist of answering multiple-choice questions, completing sentences, identifying images, or performing activities related to the subject matter.
+|Prueba donde los concursantes responden preguntas o realizan actividades que ponen a prueba su conocimiento en distintos temas. Puede incluir preguntas de opción múltiple, completar frases, identificar imágenes, entre otros.
 |El desafío
 
-|Warm question
-|Test in which contestants' aim is to answer questions rapidly and accurately, requiring quick thinking, as questions are presented rapidly without pauses between them. Contestants strive to provide correct answers to accumulate points, but they must also carefully assess the risk of answering incorrectly, which could lead to losing points.
+|Warm Question
+|Ronda en la que los concursantes deben responder preguntas de manera rápida y precisa. Las preguntas se presentan sin pausas, por lo que hay que pensar rápido, pero sin arriesgar demasiado porque las respuestas incorrectas pueden restar puntos.
 |Pregunta caliente
 
 |Wise Men Stack
-|Test in which questions are presented on a wide range of topics spanning from literature and history to science and popular culture. Contestants must answer as many questions correctly as possible within a limited time frame.
+|Prueba con preguntas de distintos temas (literatura, historia, ciencia, cultura popular, etc.). El objetivo es responder correctamente el mayor número posible en un tiempo limitado.
 |Batería de sabios
-
 |===
 
-=== Technical Terms
+=== Términos técnicos
 [cols="1,3,1",options="header"]
 |===
-|Term |Definition |ES Translation
+|Término |Definición |Traducción al español
 
-|Arc42
-|Set of recommendations for documenting and designing software architectures, particularly for software-intensive systems, that provides a template for architecture documentation structured into various sections covering different aspects of the architecture and aiming to promote clear communication and understanding of this one among stakeholders.
+|arc42
+|Conjunto de recomendaciones para documentar y diseñar arquitecturas de software. Proporciona una plantilla estructurada para comunicar mejor los aspectos técnicos del sistema.
 |_N/A_
 
 |Backend
-|Server-side of a software application or website. It encompasses everything that users don't see directly, such as databases, servers, and application logic. The backend is responsible for processing requests from the frontend and generating the appropriate responses.
+|Parte del software que funciona en el servidor y no es visible para los usuarios. Se encarga del procesamiento de datos, almacenamiento en bases de datos y lógica de negocio.
 |_N/A_
 
 |Container
-|Lightweight, portable, and self-contained unit that packages together all the necessary software components, such as code, runtime, libraries, and dependencies, needed to run an application. Containers provide a consistent environment for running applications across different computing environments.
+|Unidad ligera y portátil que incluye todo lo necesario para ejecutar una aplicación (código, dependencias, librerías, etc.), asegurando que funcione igual en cualquier entorno.
 |Contenedor
 
 |Frontend
-|Part of a software application or website that users interact with directly. It encompasses the user interface (UI) and user experience (UX) components that users see and interact with in their web browsers or on their devices. This includes elements such as buttons, forms, menus, and any visual or interactive elements users interact with to use the application.
+|Parte del software que interactúa directamente con el usuario. Incluye la interfaz gráfica y la experiencia de usuario en el navegador o en una aplicación.
 |_N/A_
 
 |Git
-|Free and open-source version control system used for tracking changes in source code during software development. It allows multiple developers to collaborate on projects simultaneously and efficiently manage changes to the codebase.
+|Sistema de control de versiones gratuito y de código abierto que permite gestionar los cambios en el código y colaborar con otros desarrolladores.
 |_N/A_
 
 |Wikidata
-|Free and open knowledge base that acts as a central storage repository for structured data from Wikimedia projects and beyond. It provides a common platform for collecting and sharing structured data about various topics, including but not limited to, people, places, events, concepts, and objects.
+|Base de datos abierta y gratuita que almacena información estructurada de proyectos Wikimedia y otros. Permite compartir y consultar datos sobre personas, lugares, eventos, conceptos, etc.
 |_N/A_
-
 |===
