--- a/docs/src/03_system_scope_and_context.adoc
+++ b/docs/src/03_system_scope_and_context.adoc
@@ -24,7 +24,6 @@ Various options:
 
 .Further Information
 
-See https://docs.arc42.org/section-3/[Context and Scope] in the arc42 documentation.
 
 ****
 
@@ -50,7 +49,7 @@ The title of the table is the name of your system, the three columns contain the
 
 image:03_Business_1.png["Diagram 3.1: Business Context"]
 
-- **WIQ ** is a web application that allows users to register, log in, play "Saber y Ganar," and view statistics about their game performance.
+- **WIChat** is a web application that allows users to register, log in, play "Saber y Ganar," and view statistics about their game performance.
 - **Wikidata ** is a free and open knowledge base that serves as a central repository for structured data. Its API will be used to retrieve the information needed to generate questions and answers within the application.
 
 === Technical Context
@@ -71,10 +70,11 @@ together with a mapping table showing the relationships between channels and inp
 
 ==== System Scope
 
+image:03_Technical.png["Diagram 3.2: Technical Context"]
 
-Other elements of the system which can be looked up in point https://arquisoft.github.io/wiq_es04a/#section-building-block-view[Point 5: Building Block View] are:
+Other elements of the system are:
 
-- **WIQ Webapp:** The module responsible for user interaction through the UI, serving as the front-end of the entire system.
+- **WIChat Webapp:** The module responsible for user interaction through the UI, serving as the front-end of the entire system.
 - **Image Generation Service**: An internal service that manages image generation based on data retrieved from Wikidata.
 - **Gateway Service:** A public-facing Express service that acts as a proxy for user management, enabling sign-up and login.
 - **User service:** An Express service that handles the registration of new users in the system.
